--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,10 @@ strong {
   font-family: Arial, sans-serif;
   font-size: 20px;
 }
+
+.detalhe{
+  color: red;
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  line-height: 1.6px;
+}
